update after talk

--- a/beamercolorthemecolorblock.sty
+++ b/beamercolorthemecolorblock.sty
@@ -38,6 +38,14 @@
     \definecolor{CB@blue}{rgb}{0,0,0.6}
 \fi
 
+\colorlet{oldred}{red}
+\colorlet{oldblue}{blue}
+\colorlet{oldgreen}{green}
+
+\colorlet{green}{CB@green}
+\colorlet{blue}{CB@blue}
+\colorlet{red}{CB@red}
+
 \mode<presentation>
 
 \setbeamercolor{palette primary}{fg=CB@fg,bg=CB@bg}
